--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
 markdown: kramdown
 theme: minima
+include: ['uploads']
 exclude:
   - Gemfile
   - Gemfile.lock
