add rest of projects to project front matter template

--- a/.forestry/front_matter/templates/project.yml
+++ b/.forestry/front_matter/templates/project.yml
@@ -65,3 +65,15 @@ fields:
   label: description
 pages:
 - _projects/reminiscence.html
+- _projects/annie_chen.html
+- _projects/ouroboros.html
+- _projects/community.html
+- _projects/personalized_attention.html
+- _projects/ehp.html
+- _projects/project_based_learning.html
+- _projects/inferior.html
+- _projects/reminiscence.html
+- _projects/newfoundland_x_labrador.html
+- _projects/sf_travel.html
+- _projects/now_open.html
+- _projects/st_francis.html
