--- a/_data/general.yml
+++ b/_data/general.yml
@@ -1,6 +1,11 @@
 tagline: Filmmaker & Creative based in Palo Alto.
+showreel_poster: "/uploads/poster/showreel.jpg"
+showreel_clip_url:
+  mp4: "/uploads/videos/showreel.mp4"
+  webm: "/uploads/videos/showreel.webm"
 about_title: About
 about_text: "I'm a filmmaker based in Palo Alto, CA. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Maecenas faucibus mollis interdum. Nullam id dolor id nibh ultricies vehicula ut id elit."
+about_image: "/uploads/about.jpg"
 see_my_work_button: See My Work
 creative_work_title: Creative Work
 professional_work_title: Professional Work
