--- a/_data/general.yml
+++ b/_data/general.yml
@@ -11,6 +11,7 @@ about_text: I'm a filmmaker based in Palo Alto, CA and an undergraduate film and
   industry and use the medium as a pathway for societal change.
 about_image: "/uploads/about.jpg"
 see_my_work_button: See My Work
+nav_contact_link: mailto:ash.xu@palettemgmt.com
 sections:
 - type: 'Creative Work'
 - type: 'Professional Work'
